# poc-poetry

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
src/py_demo/: increment.py
tests/: test_increment.py
