[tool.poetry]
name = "py-demo"
version = "0.1.0"
description = "A proof-of-concept python project setup"
authors = ["David Valles <davidtjvalles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
