[tool.poetry]
name = "poc-poetry"
version = "0.1.0"
description = "A proof-of-concept using python and poetry"
authors = ["David Valles <davidtjvalles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hypothesis = "^6.8.1"
flake8 = "^3.9.0"
pep8-naming = "^0.11.1"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
black = "^20.8b1"
safety = "^1.10.3"
bandit = "^1.7.0"
pre-commit = "^2.11.1"
mypy = "^0.812"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
